<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContentActivity">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_regular"
        android:text="@string/article_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article_subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="@string/article_subtitle"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/article_text" />

            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:layout_gravity="left"
                android:text="@string/button_1"
                android:onClick="successSecretOne"/>

            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="center_vertical"
                android:text="@string/button_2"
                android:onClick="successSecretTwo"/>

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="center_vertical"
                android:text="@string/button_3"
                android:onClick="successSecretThree"/>

            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="left"
                android:text="@string/button_4" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="left"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="left"
                android:text="@string/button_6" />

            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="left"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="left"
                android:text="@string/button_8" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="left"
                android:text="@string/button_9" />

            <Button
                android:id="@+id/button_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="left"
                android:text="@string/button_10" />

            <Button
                android:id="@+id/button_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="start"
                android:text="@string/button_11" />

            <Button
                android:id="@+id/button_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="start"
                android:text="@string/button_12" />

            <Button
                android:id="@+id/button_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="start"
                android:text="@string/button_13" />

            <Button
                android:id="@+id/button_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="start"
                android:text="@string/button_14" />

            <Button
                android:id="@+id/button_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="left"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="left"
                android:text="@string/button_16" />

            <Button
                android:id="@+id/button_17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="left"
                android:text="@string/button_17" />

            <Button
                android:id="@+id/button_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="start"
                android:text="@string/button_18" />

            <Button
                android:id="@+id/button_19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="left"
                android:text="@string/button_19" />

            <Button
                android:id="@+id/button_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="start"
                android:text="@string/button_20" />

            <Button
                android:id="@+id/button_21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="start"
                android:text="@string/button_21" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>